// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/require-sri.md inline validation: correct 1`] = `[]`;

exports[`docs/rules/require-sri.md inline validation: crossorigin 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 5,
        "message": "SRI "integrity" attribute is required on <link> element",
        "offset": 102,
        "ruleId": "require-sri",
        "ruleUrl": "https://html-validate.org/rules/require-sri.html",
        "selector": "link:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!--- local resource -->
<link rel="stylesheet" href="local.css">

<!-- resource loaded over CDN -->
<link rel="stylesheet" href="//cdn.example.net/remote.css">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/require-sri.md inline validation: exclude-option 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 4,
        "message": "SRI "integrity" attribute is required on <link> element",
        "offset": 159,
        "ruleId": "require-sri",
        "ruleUrl": "https://html-validate.org/rules/require-sri.html",
        "selector": "link:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- doesn't match excluded pattern, yields error -->
<link rel="stylesheet" href="//cdn.example.net/remote.css">
<!-- matches excluded pattern, no error -->
<link rel="stylesheet" href="//static-assets.example.org/remote.css">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/require-sri.md inline validation: include-option 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 2,
        "message": "SRI "integrity" attribute is required on <link> element",
        "offset": 49,
        "ruleId": "require-sri",
        "ruleUrl": "https://html-validate.org/rules/require-sri.html",
        "selector": "link:nth-child(1)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- matches included pattern, yields error -->
<link rel="stylesheet" href="//cdn.example.net/remote.css" />
<!-- doesn't match, no error -->
<link rel="stylesheet" href="//static-assets.example.org/remote.css" />",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/require-sri.md inline validation: incorrect 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "SRI "integrity" attribute is required on <script> element",
        "offset": 1,
        "ruleId": "require-sri",
        "ruleUrl": "https://html-validate.org/rules/require-sri.html",
        "selector": "script",
        "severity": 2,
        "size": 6,
      },
    ],
    "source": "<script src="//cdn.example.net/jquery.min.js"></script>",
    "warningCount": 0,
  },
]
`;
